2003-01-01 23:22  Gregory John Casamento  <greg_casamento@yahoo.com>

	* Source/NSBundleAdditions.m: Moved the declaration of 
	nibitems in loadNibFile:externalNameTable:withZone: so
	that it can be released if there is an exception.
	* Source/NSActionCell.m: Documentation.
	* Source/NSScreen.m: Documentation.
	
2003-12-31 01:07  Alexander Malmberg <alexander@malmberg.org>

	* KeyBindings/DefaultKeyBindings.dict: Uncomment the
	moveUpAndModifySelection: and moveDownAndModifySelection:
	entries.

2003-12-31 00:37  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSTextView.m (-setSelectedRange:affinity:stillSelecting:):
	Make sure oldRange is always initialized.

2003-12-30  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBundleAdditions.m (-pathForNibResource:) ignore
	extension "nib", so "gorm" or "gmodel" get used instead.

2003-12-30  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSAffineTransform.h: Corrected element names tX
	and TY of structure NSAffineTransformStruct to fit Cocoa naming.
	* Source/NSAffineTransform.m
	* Source/NSView.m (-_rebuildCoordinates)
	* Source/NSPrintOperation.m (-_displayPageInRect:atPlacement:withInfo:)
	Adopted to change of NSAffineTransformStruct elements.
	* Source/Function.m
	Implemented NSDrawWindowBackground(), NSDrawDarkBezel() and
	NSDrawLightBezel().
	* Source/NSTableHeaderView.m (-drawRect:) Use NSDrawTiledRects()
	instead of DPS operations.

2003-12-30 00:48  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSBundleAdditions.m: Added private class to collect
	top level items (controllers) which are instantiated in the
	.gorm file.  This and the change to GSNibContainer provide a
	much cleaner way of retaining the top level items in the .gorm
	file without requiring a new special entry in the nameTable.
	* Source/GSNibContainer.[hm]: Renamed method awakeWithContext:
	to awakeWithContext:topLevelItems: to allow passing in the
	items collected.  Also added code to add the GSNibItems which